# wfp-survey-toolbox

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml
src/wfp_survey_toolbox/: __init__.py
src/wfp_survey_toolbox/core/: base.py  constants.py
src/wfp_survey_toolbox/core/constants/: fcs_constants.py  rcsi_constants.py
src/wfp_survey_toolbox/indicators/: __init__.py  fcs.py  rcsi.py
src/wfp_survey_toolbox/validation/: validators.py
tests/: conftest.py
tests/test_indicators/: test_fcs.py  test_rcsi.py
